src/pages/styles/certificates.css
.certificates-logo-container {
	display: flex;
	justify-content: left;
	padding-top: 25px;
}

.certificates-logo {
	display: flex;
	position: fixed;
	border: 1px solid white;
	border-radius: 50%;
	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
	top: 4vh;
}

.certificates-main-container {
	display: flex;
	flex-direction: column;
	height: 100%;
	margin: 0;
	padding-top: 120px;
}

.certificates-container {
	display: flex;
	flex-direction: column;
}

.certificates-wrapper {
	padding-top: 50px;
	padding-bottom: 50px;
	display: flex;
	flex-direction: column;
}

.certificates-certificate {
	padding-top: 0px;
	padding-left: 35px;
	padding-bottom: 20px;
	border-left: 2px solid #f4f4f5;
	width: 100%;
}

@media (max-width: 1024px) {
	.certificates-title {
		width: 100% !important;
	}

	.certificates-subtitle {
		width: 100% !important;
	}
}

